--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="aUf-Yr-iLQ" id="QiV-bF-t5M"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="lfT-dz-LvC"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="lfT-dz-LvC">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="tbe-dq-IJ9">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="aUf-Yr-iLQ" id="jsg-XF-5Vz"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eUl-hJ-8de" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
